# discord-bot

./: Makefile  pyproject.toml
src/: app.py  bot.py  settings.py
src/commands/admin/: hello.py  ping.py
src/commands/normal/: play.py
